--- a/Thesis_HMI/Themes/Base/BaseStyle.css
+++ b/Thesis_HMI/Themes/Base/BaseStyle.css
@@ -15,7 +15,7 @@
 * The font usage is defined in the main CSS file of the active theme (for example Themes/Base/Style.css).
 */
 html {
-    font-family: RobotoCondensed, 'Microsoft YaHei', '微软雅黑', 'Hiragino Sans GB', '冬青黑体', 'STXihei', '华文细黑', 'WenQuanYi Micro Hei', 'Meiryo', 'メイリオ', 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ ProN', 'Noto Sans CJK SC', 'Noto Sans CJK TC', 'Noto Sans CJK JP', 'Noto Sans CJK KR', sans-serif;
+    font-family: "Segoe UI" ,"Noto Sans", RobotoCondensed, 'Microsoft YaHei', '微软雅黑', 'Hiragino Sans GB', '冬青黑体', 'STXihei', '华文细黑', 'WenQuanYi Micro Hei', 'Meiryo', 'メイリオ', 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ ProN', 'Noto Sans CJK SC', 'Noto Sans CJK TC', 'Noto Sans CJK JP', 'Noto Sans CJK KR', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: normal;
